# DjinnOS-Shyagzun

./: .gitignore  AAA_TOOLCHAIN_BACKLOG.md  ARCHITECTURE.md  Atelier Desktop.lnk  COBRA_SHYGAZUN_SPEC.md  ONBOARDING.md  README.md  ROADMAP.md  ROADMAP_MAX.md  SPRINT_EXECUTION_BOARD.md  SPRINT_PLAN.md  build_log.txt  check-stack.ps1  conftest.py  deploy.ps1  flash.ps1  launch-atelier.bat  make_img.py  make_usb.ps1  package-lock.json  player_home.py  pyproject.toml  riscv_syms.txt  scene_graph_defaults.json  start-all.ps1  start-atelier-api.ps1  start-atelier-desktop.ps1  start-kernel.ps1  wrangler.toml
djinnos-kernel/: Cargo.toml  atelier_proxy.py  browser_proxy.py  build.ps1  build.rs  build_x86.ps1  deploy.ps1  linker.ld  linker_x86.ld  net.pcap  run.ps1
djinnos-kernel/.cargo/: config.toml
djinnos-kernel/c/: README.md  ffi_probe.c
djinnos-kernel/c/examples/: hopfield_demo.c
djinnos-kernel/c/include/: djinnos.h  djinnos_user.h  stddef.h  stdint.h  string.h
djinnos-kernel/c/quickjs/: djinnos_js.c  djinnos_port.h  inttypes.h  pthread.h
djinnos-kernel/c/runtime/: alloc.c  panic.c  string.c
djinnos-kernel/c/tests/: test_runtime.c
djinnos-kernel/scripts/: flash_d.ps1  make_usb.ps1
djinnos-kernel/src/: acpi.rs  agent.rs  alchemy.rs  amdgpu.rs  atelier.rs  background.rs  battery.rs  book.rs  boot.s  boot_x86.s  browser.rs  building.html  c_api.rs  combat.rs  compositor.rs  crypto.rs  cursor.rs  dhcp.rs  dialogue.rs  dialogue_tree.rs  dungeon.rs  e1000.rs  ec.rs  editor.rs  eigenstate.rs  elf.rs  faerie_pages.rs  fat32w.rs  fb.rs  ffi_test.rs  font.rs  foraging.rs  fs.rs  game7.rs  gpt.rs  gpu.rs  hda.rs  home.rs  http_building.rs  http_intel.rs  (+63 more)
djinnos-kernel/tools/: mkdisk.py
(+996 files in other folders)
