[workspace]
members = [
    ".",
    "crates/kobra-core",
    "tools/kobra-vm",
]
resolver = "2"

[package]
name    = "djinnos-kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name              = "djinnos-kernel"
path              = "src/main.rs"

[dependencies]
kobra-core = { path = "crates/kobra-core" }

[build-dependencies]
fontdue = "0.9"
cc      = "1"

[profile.dev]
panic         = "abort"

[profile.release]
opt-level     = 2
lto           = false
codegen-units = 1
panic         = "abort"